# fastapi-ca

./: README.md  alembic.ini  containers.py  create_users.py  database.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2025_07_07_2142-ffbc51e56f14_add_user_table.py  2025_07_09_2047-ac21cf94fb68_user_add_memo.py
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
